M5_DjangoORM.txt
Microsoft Windows [Version 10.0.26100.2033]
(c) Microsoft Corporation. All rights reserved.

C:\Users\Brenda> cd C:\Users\Brenda\djangogirls

C:\Users\Brenda\djangogirls> source myvenv/Scripts/activate
'source' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\Brenda\djangogirls>myvenv\Scripts\activate

(myvenv) C:\Users\Brenda\djangogirls>python manage.py shell
6 objects imported automatically (use -v 2 for details).

Python 3.14.6 (tags/v3.14.6:c63aec6, Jun 10 2026, 10:26:10) [MSC v.1944 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> Post.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Post' is not defined
>>> from blog.models import Post
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: cannot import name 'Post' from 'blog.models' (C:\Users\Brenda\djangogirls\blog\models.py)
>>> Post.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Post' is not defined
>>> from django.contrib.auth.models import User
>>> from blog.models import Post
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: cannot import name 'Post' from 'blog.models' (C:\Users\Brenda\djangogirls\blog\models.py)
>>> ^Z

now exiting InteractiveConsole...

(myvenv) C:\Users\Brenda\djangogirls>python manage.py makemigrations blog
Migrations for 'blog':
  blog\migrations\0001_initial.py
    + Create model Post

(myvenv) C:\Users\Brenda\djangogirls>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, blog, contenttypes, sessions
Running migrations:
  Applying blog.0001_initial... OK

(myvenv) C:\Users\Brenda\djangogirls>python manage.py shell
7 objects imported automatically (use -v 2 for details).

Python 3.14.6 (tags/v3.14.6:c63aec6, Jun 10 2026, 10:26:10) [MSC v.1944 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from blog.models import Post
>>> Post.objects.all()
<QuerySet []>
>>> Post.objects.create(author=me, title='Sample title', test='Test')
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'me' is not defined
>>> from django.contrib.auth.models import User
>>> User.objects.all()
<QuerySet [<User: Brenda>]>
>>> me =User.objects.get(username='Brenda")
  File "<console>", line 1
    me =User.objects.get(username='Brenda")
                                  ^
SyntaxError: unterminated string literal (detected at line 1)
>>> me = User.objects.get(username='Brenda')
>>> Post.object.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'Post' has no attribute 'object'. Did you mean:'objects'?
>>> Post.obects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'Post' has no attribute 'obects'. Did you mean:'objects'?
>>> Post.objects.all()
<QuerySet []>
>>> Post.objects.filter(author=me)
<QuerySet []>
>>> Post.objects.filter(title__contains='title')
<QuerySet []>
>>> from django.utils import timezone
>>> Post.objects.filter(published_date__lte=timezone.now())
<QuerySet []>
>>> post = Post.objects.get(title="Sample title")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\Brenda\djangogirls\myvenv\Lib\site-packages\django\db\models\manager.py", line 87, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\Brenda\djangogirls\myvenv\Lib\site-packages\django\db\models\query.py", line 635, in get
    raise self.model.DoesNotExist(
        "%s matching query does not exist." % self.model._meta.object_name
    )
blog.models.Post.DoesNotExist: Post matching query does not exist.
>>> Post.objects.create(
... author=me,
... title='Sample title',
... text='Test'
... )
<Post: Sample title>
>>> post.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'post' is not defined. Did you mean: 'Post'?
>>> Post.objects.all()
<QuerySet [<Post: Sample title>]>
>>> exit()
now exiting InteractiveConsole...

(myvenv) C:\Users\Brenda\djangogirls>
